# open-tracker-go-server/internal/auth/model.go
@@ -5,9 +5,15 @@ import (
 	"github.com/leonardocartaxo/open-tracker/open-tracker-go-server/internal/user"
 )
 
+type Signup struct {
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
 type Signing struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
 }
 
 // Claims struct - this defines the structure of the JWT payload
