# open-tracker-go-server/internal/user/model.go
@@ -27,9 +27,9 @@ type DTO struct {
 }
 
 type CreateDTO struct {
-	Name     string `json:"name"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
 }
 
 type UpdateDTO struct {
